--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,42 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html,
 body,
 #root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  background: aquamarine;
+    background: black;
+}
+
+.logo {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    color: white;
+    margin: 25px;
+    width: 350px;
+    height: 110px;
+    outline: 1px black;
 }
 
 .container {
-  font-family: arial;
-  font-size: 24px;
-  margin: 25px;
-  width: 350px;
-  height: 200px;
-  outline: dashed 1px black;
+    font-family: arial;
+    font-size: 24px;
+    margin: 25px;
+    width: 350px;
+    height: 200px;
+    outline: 1px black;
 }
 
 .containerXR {
-  margin: 25px;
-  width: 875px;
-  height: 500px;
-  outline: dashed 1px black;
+    margin: 25px;
+    width: 875px;
+    height: 500px;
+    outline: 1px black;
 }
