--- a/src/styles.css
+++ b/src/styles.css
@@ -7,13 +7,19 @@ body {
 }
 
 .logo {
+    display: flex;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 24px;
+    font-weight: bold;
     color: white;
     margin: 2px;
+    margin-left: 15px;
     width: 350px;
     height: 110px;
-    outline: 1px black;
+}
+
+.logoIcon {
+    margin: 2px;
 }
 
 .container {
@@ -36,12 +42,14 @@ body {
     height: 700px;
     margin-right: 20px;
     margin-left: 100px;
+    margin-top: -100px;
     /* outline: dashed 1px rgb(208, 75, 75); */
 }
 
 .containerCard {
     margin: 25px;
-    width: 875px;
+    margin-top: 150px;
+    width: 1200px;
     height: 500px;
     outline: 1px rgb(3, 245, 100);
 }
